refactor: support jdk8
Signed-off-by: moxiaoying <1159230165@qq.com>